--- a/modules/relationships.html
+++ b/modules/relationships.html
@@ -172,18 +172,7 @@
             <div class="history-header-top">
                 <h2 class="history-title">Historia kontaktu</h2>
 <div class="history-action-buttons">
-    <!-- AI Buttons -->
-    <button id="aiSummarizeCompanyBtn" class="ai-btn" title="Podsumuj AI">
-        <span class="ai-icon">✨</span>
-        <span>Podsumuj AI</span>
-    </button>
-    <button id="aiSuggestStepsBtn" class="ai-btn" title="Zaproponuj kroki">
-        <span class="ai-icon">🎯</span>
-        <span>Sugestie</span>
-    </button>
-    
-    <!-- Original Buttons -->
-    <button id="addCompanyActivityBtn" class="add-btn history-add-btn">
+    <button id="addContactActivityBtn" class="add-btn history-add-btn">
         <span class="plus">+</span>
         <span>Dodaj aktywność</span>
     </button>
@@ -335,20 +324,31 @@
                     </div>
 
                     <!-- RIGHT: COMPANY HISTORY -->
-    <div class="detail-column-right">
-        <div class="history-header">
-            <div class="history-header-top">
-                <h2 class="history-title">Historia firmy</h2>
-                <div class="history-action-buttons">
-                    <button id="addCompanyActivityBtn" class="add-btn history-add-btn">
-                        <span class="plus">+</span>
-                        <span>Dodaj aktywność</span>
-                    </button>
-                    <button id="addCompanyNoteBtn" class="add-btn history-add-btn">
-                        <span class="plus">+</span>
-                        <span>Dodaj notatkę</span>
-                    </button>
-                </div>
+<div class="detail-column-right">
+    <div class="history-header">
+        <div class="history-header-top">
+            <h2 class="history-title">Historia firmy</h2>
+            <div class="history-action-buttons">
+                <!-- AI Buttons -->
+                <button id="aiSummarizeCompanyBtn" class="ai-btn" title="Podsumuj AI">
+                    <span class="ai-icon">✨</span>
+                    <span>Podsumuj AI</span>
+                </button>
+                <button id="aiSuggestStepsBtn" class="ai-btn" title="Zaproponuj kroki">
+                    <span class="ai-icon">🎯</span>
+                    <span>Sugestie</span>
+                </button>
+                
+                <!-- Original Buttons -->
+                <button id="addCompanyActivityBtn" class="add-btn history-add-btn">
+                    <span class="plus">+</span>
+                    <span>Dodaj aktywność</span>
+                </button>
+                <button id="addCompanyNoteBtn" class="add-btn history-add-btn">
+                    <span class="plus">+</span>
+                    <span>Dodaj notatkę</span>
+                </button>
+            </div>
             </div>
             <div class="history-controls">
                 <div class="history-tabs">
