--- a/modules/relationships.html
+++ b/modules/relationships.html
@@ -176,7 +176,7 @@
         <span class="plus">+</span>
         <span>Dodaj aktywność</span>
     </button>
-    <button id="addCompanyNoteBtn" class="add-btn history-add-btn">
+    <button id="addContactNoteBtn" class="add-btn history-add-btn">
         <span class="plus">+</span>
         <span>Dodaj notatkę</span>
     </button>
