--- a/modules/relationships.html
+++ b/modules/relationships.html
@@ -19,14 +19,12 @@
                 <div class="app-logo-subtitle">Moduł: Relacje</div>
             </div>
             <div class="app-header-right">
-    <button id="aiSettingsBtn" class="ai-settings-btn" title="Ustawienia AI">✨ AI</button>
-    <span class="user-email" id="userEmail"></span>
-    <button id="logoutBtn" class="logout-btn">Wyloguj</button>
-</div>
+                <button id="aiSettingsBtn" class="ai-settings-btn" title="Ustawienia AI">✨ AI</button>
+                <span class="user-email" id="userEmail"></span>
+                <button id="logoutBtn" class="logout-btn">Wyloguj</button>
             </div>
         </div>
     </header>
-
     <!-- BREADCRUMB -->
     <div class="breadcrumb">
         <a href="../index.html" class="back-to-dashboard">
@@ -171,16 +169,33 @@
         <div class="history-header">
             <div class="history-header-top">
                 <h2 class="history-title">Historia kontaktu</h2>
-<div class="history-action-buttons">
-    <button id="addContactActivityBtn" class="add-btn history-add-btn">
-        <span class="plus">+</span>
-        <span>Dodaj aktywność</span>
-    </button>
-    <button id="addContactNoteBtn" class="add-btn history-add-btn">
-        <span class="plus">+</span>
-        <span>Dodaj notatkę</span>
-    </button>
-</div>
+
+                    <!-- RIGHT: CONTACT HISTORY -->
+    <div class="detail-column-right">
+        <div class="history-header">
+            <div class="history-header-top">
+                <h2 class="history-title">Historia kontaktu</h2>
+                <div class="history-action-buttons">
+                    <!-- AI Buttons -->
+                    <button id="aiSummarizeContactBtn" class="ai-btn" title="Podsumuj AI">
+                        <span class="ai-icon">✨</span>
+                        <span>Podsumuj AI</span>
+                    </button>
+                    <button id="aiSuggestContactStepsBtn" class="ai-btn" title="Zaproponuj kroki">
+                        <span class="ai-icon">🎯</span>
+                        <span>Sugestie</span>
+                    </button>
+                    
+                    <!-- Original Buttons -->
+                    <button id="addContactActivityBtn" class="add-btn history-add-btn">
+                        <span class="plus">+</span>
+                        <span>Dodaj aktywność</span>
+                    </button>
+                    <button id="addContactNoteBtn" class="add-btn history-add-btn">
+                        <span class="plus">+</span>
+                        <span>Dodaj notatkę</span>
+                    </button>
+                </div>
             </div>
             <div class="history-controls">
                 <div class="history-tabs">
@@ -201,7 +216,6 @@
                 </div>
             </div>
         </div>
-
         <!-- TAB: COMPANIES -->
         <div id="companiesTab" class="tab-content">
             <!-- COMPANY LIST VIEW -->
