--- a/modules/relationships.html
+++ b/modules/relationships.html
@@ -19,12 +19,14 @@
                 <div class="app-logo-subtitle">Moduł: Relacje</div>
             </div>
             <div class="app-header-right">
-                <button id="aiSettingsBtn" class="ai-settings-btn" title="Ustawienia AI">✨ AI</button>
-                <span class="user-email" id="userEmail"></span>
-                <button id="logoutBtn" class="logout-btn">Wyloguj</button>
+    <button id="aiSettingsBtn" class="ai-settings-btn" title="Ustawienia AI">✨ AI</button>
+    <span class="user-email" id="userEmail"></span>
+    <button id="logoutBtn" class="logout-btn">Wyloguj</button>
+</div>
             </div>
         </div>
     </header>
+
     <!-- BREADCRUMB -->
     <div class="breadcrumb">
         <a href="../index.html" class="back-to-dashboard">
@@ -170,31 +172,29 @@
             <div class="history-header-top">
                 <h2 class="history-title">Historia kontaktu</h2>
 
-                    <!-- RIGHT: CONTACT HISTORY -->
-    <div class="detail-column-right">
-        <div class="history-header">
-            <div class="history-header-top">
-                <h2 class="history-title">Historia kontaktu</h2>
-                <div class="history-action-buttons">
-                    <!-- AI Buttons -->
-                    <button id="aiSummarizeContactBtn" class="ai-btn" title="Podsumuj AI">
-                        <span class="ai-icon">✨</span>
-                        <span>Podsumuj AI</span>
-                    </button>
-                    <button id="aiSuggestContactStepsBtn" class="ai-btn" title="Zaproponuj kroki">
-                        <span class="ai-icon">🎯</span>
-                        <span>Sugestie</span>
-                    </button>
-                    
-                    <!-- Original Buttons -->
-                    <button id="addContactActivityBtn" class="add-btn history-add-btn">
-                        <span class="plus">+</span>
-                        <span>Dodaj aktywność</span>
-                    </button>
-                    <button id="addContactNoteBtn" class="add-btn history-add-btn">
-                        <span class="plus">+</span>
-                        <span>Dodaj notatkę</span>
-                    </button>
+                <div class="history-header-top">
+                    <h2 class="history-title">Historia kontaktu</h2>
+                    <div class="history-action-buttons">
+                        <!-- AI Buttons -->
+                        <button id="aiSummarizeContactBtn" class="ai-btn" title="Podsumuj AI">
+                            <span class="ai-icon">✨</span>
+                            <span>Podsumuj AI</span>
+                        </button>
+                        <button id="aiSuggestContactStepsBtn" class="ai-btn" title="Zaproponuj kroki">
+                            <span class="ai-icon">🎯</span>
+                            <span>Sugestie</span>
+                        </button>
+                        
+                        <!-- Original Buttons -->
+                        <button id="addContactActivityBtn" class="add-btn history-add-btn">
+                            <span class="plus">+</span>
+                            <span>Dodaj aktywność</span>
+                        </button>
+                        <button id="addContactNoteBtn" class="add-btn history-add-btn">
+                            <span class="plus">+</span>
+                            <span>Dodaj notatkę</span>
+                        </button>
+                    </div>
                 </div>
             </div>
             <div class="history-controls">
@@ -216,6 +216,7 @@
                 </div>
             </div>
         </div>
+
         <!-- TAB: COMPANIES -->
         <div id="companiesTab" class="tab-content">
             <!-- COMPANY LIST VIEW -->
