--- a/modules/relationships.html
+++ b/modules/relationships.html
@@ -695,24 +695,33 @@
             <h2>⚙️ Ustawienia AI</h2>
             <button class="close-btn" onclick="closeAiSettings()">&times;</button>
         </div>
-        <div class="ai-settings-content">
+<div class="ai-settings-content">
             <div class="form-group">
-                <label for="aiApiKey">
+                <label for="aiProvider">Wybierz dostawcę AI</label>
+                <select id="aiProvider" onchange="updateAiProviderUI()" style="width: 100%; padding: 0.8rem; border-radius: 12px; border: 1px solid var(--border-subtle); background: var(--surface); color: var(--text-primary);">
+                    <option value="gemini">Google Gemini</option>
+                    <option value="openai">OpenAI</option>
+                    <option value="llm7">LLM7.io</option>
+                </select>
+            </div>
+
+            <div class="form-group">
+                <label for="aiApiKey" id="aiApiKeyLabel">
                     Gemini API Key
-                    <a href="https://aistudio.google.com/app/apikey" target="_blank" style="font-size: 0.65rem; margin-left: 0.5rem;">
+                    <a href="https://aistudio.google.com/app/apikey" target="_blank" id="aiApiKeyLink" style="font-size: 0.65rem; margin-left: 0.5rem;">
                         (Pobierz klucz →)
                     </a>
                 </label>
-                <input type="password" id="aiApiKey" placeholder="AIzaSyC...">
+                <input type="password" id="aiApiKey" placeholder="Wklej swój klucz API tutaj...">
                 <small style="display: block; margin-top: 0.5rem; font-size: 0.75rem; color: var(--text-secondary);">
-                    Klucz jest zapisywany lokalnie w przeglądarce.
+                    Klucz jest zapisywany lokalnie w Twojej przeglądarce.
                 </small>
             </div>
             
             <div class="form-group">
                 <label>
                     <input type="checkbox" id="aiConsent" style="width: auto; margin-right: 0.5rem;">
-                    Wyrażam zgodę na przetwarzanie danych przez AI (Google Gemini)
+                    Wyrażam zgodę na przetwarzanie danych przez wybrane AI
                 </label>
                 <small style="display: block; margin-top: 0.5rem; font-size: 0.75rem; color: var(--text-secondary); line-height: 1.5;">
                     Dane są anonimizowane przed wysłaniem.
