--- a/modules/relationships.html
+++ b/modules/relationships.html
@@ -682,8 +682,8 @@
             </div>
         </div>
         <div class="modal-actions" id="aiModalActions" style="display: none;">
-            <button type="button" class="btn btn-secondary" id="closeAiBtn">Zamknij</button>
-            <button type="button" class="btn btn-primary" id="copyAiBtn">📋 Kopiuj</button>
+            <button type="button" class="btn btn-secondary" id="regenerateAiBtn">🔄 Wygeneruj ponownie</button>
+            <button type="button" class="btn btn-primary" id="saveAiNoteBtn">💾 Zapisz jako notatkę</button>
         </div>
     </div>
 </div>
